--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,11 @@
 
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+
 @import './SCSS/layout';
 @import './SCSS/login';
+@import './SCSS/navBar'; 
+@import './SCSS/home'; 
+@import './SCSS/listBarTop10'; 
+@import './SCSS/listReviews';
+@import './SCSS/barDetails';
