--- a/src/SCSS/_layout.scss
+++ b/src/SCSS/_layout.scss
@@ -1,7 +1,7 @@
 $primary: black;
-$secondary:#f4c734;
+$secondary:#F7DC6F;
 $terciary: #fcfffa;
-$fourthy: #8000ff;
+$fourthy: #FF8000;
 $fifthy: #00b084;
 $sixthy: #3d397c;
 $font-primary: 'Open Sans', sans-serif;
@@ -12,48 +12,63 @@ $footer-height: 60px;
 html {
     font-size: $font-size;
     font-family: $font-primary;
+   
+    
 
     body {
-        padding: 0% 0%;
+        padding: 0;
+        margin: 0;
         font-family: $font-primary, $font-secundary;
         font-size: $font-size;
         color: $secondary;
-        
         div {
             max-width: 100%;
         }
+      
         p {
-            padding: 10% 0%;
+            
             color: $primary;
-            line-height: 1.4em;
+            line-height: 1.1em;
+            text-decoration: none;
         }
         h1 {
-            padding: 5% 0%;
-            font-family: $font-secundary;
+           
+            font-family: $font-primary;
             font-size: 2rem;
             color: $primary;
+            text-decoration: none;
         }
         h2 {
-            font-family: $font-secundary;
+            font-family: $font-primary;
             font-size: 1.5rem;
             color: $primary;
-            padding: 5% 0% 10% 0%;
+            text-decoration: none;
         }
         h3 {
+            
             font-family: $font-primary;
             font-size: 1.2rem;
-            color: $secondary;
-            padding: 2% 0% 2% 0%;
+            color: $primary;
+            text-decoration: none;
         }
         .container {
-            padding: 10% 10%;
             
             margin: 0%;
             text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 100%;
             
+        }
+        hr {
+            width: 95%;
+        }
+        .padding {
+         padding: 5%;
+        }
+        .margin {
+            margin: 10% 0;
         }
     }    
 }    
