--- a/src/SCSS/_layout.scss
+++ b/src/SCSS/_layout.scss
@@ -64,6 +64,9 @@ html {
         hr {
             width: 95%;
         }
+        a {
+            text-decoration: none;
+        }
         .padding {
          padding: 5%;
         }
