style added to forms

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 
 @import './SCSS/layout';
 @import './SCSS/login';
+@import './SCSS/signUP';
 @import './SCSS/navBar'; 
 @import './SCSS/home'; 
 @import './SCSS/listBarTop10'; 
