--- a/src/SCSS/_layout.scss
+++ b/src/SCSS/_layout.scss
@@ -1,9 +1,11 @@
 $primary: black;
-$secondary:#F7DC6F;
+$secondary: #fbde45;
 $terciary: #fcfffa;
-$fourthy: #FF8000;
-$fifthy: #00b084;
+$fourthy: #ec9336;
+$fifthy: #1fbb3b;
 $sixthy: #3d397c;
+$seventhy: #1d1d26;
+$eighty: #3d3d3d;
 $font-primary: 'Open Sans', sans-serif;
 $font-secundary: 'Roboto', cursive;
 $font-size: 16px;
@@ -40,14 +42,14 @@ html {
         }
         h2 {
             font-family: $font-primary;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             color: $primary;
             text-decoration: none;
         }
         h3 {
             
             font-family: $font-primary;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             color: $primary;
             text-decoration: none;
         }
@@ -72,6 +74,75 @@ html {
         }
         .margin {
             margin: 10% 0;
+        }     
+        
+        label {
+            color: $seventhy;
+            font-size: 1.1rem;
+            text-align: left;
+            padding: 10px 0 0;
+            
         }
+        
+        
+        form {
+            display: flex;
+            flex-direction: column;
+            margin: 5% 0% 0%;
+            width: 100%;
+        }
+        
+        
+        input[type=text] {
+            width: 100%;
+            padding: 5px 0%;
+            box-sizing: border-box;
+            border: none;
+            border-bottom: 1px solid $eighty;
+            color: $eighty;
+            font-size: 1.1rem;
+          }
+        
+          input[type=password] {
+            width: 100%;
+            padding: 5px 0%;
+            box-sizing: border-box;
+            border: none;
+            border-bottom: 1px solid $eighty;
+            color: $eighty;
+            font-size: 1.1rem;
+          }
+          
+        input:-webkit-autofill,
+        input:-webkit-autofill:hover, 
+        input:-webkit-autofill:focus, 
+        input:-webkit-autofill:active  {
+            -webkit-box-shadow: 0 0 0 30px $terciary inset !important;
+        }
+        
+        select {
+            padding: 5px 0px;
+            font-size: 1.1rem;
+        
+        }
+        input[type=radio] {
+            padding: 0 10px 0 0;
+           
+        }
+        
+        input[type=checkbox] {
+            padding: 5px 10px 0 5px;
+        }
+
+        
+         input[type=submit] {
+           
+            font-size: 1rem;
+            width: 100%;
+            
+         }
+         .color-grey {
+             color: $seventhy;
+         }
     }    
 }    
