--- a/src/SCSS/_barDetails.scss
+++ b/src/SCSS/_barDetails.scss
@@ -8,6 +8,6 @@
     border-radius:5px;
     border: 1px solid $fifthy;
 	text-align:center;
-     
+    font-size: 0.9rem;
     text-decoration: none;
 }
