--- a/src/SCSS/_listBarTop10.scss
+++ b/src/SCSS/_listBarTop10.scss
@@ -47,12 +47,12 @@
 .button-card-bar {
     padding: 3% 8%;
     align-content: center;
-    width:60%;
+    width:100%;
 	background-color: $fifthy;
 	color:#FFF;
 	border-radius:5px;
 	text-align:center;
-    box-shadow: 2px 2px 3px #999;   
+    font-size: 0.9rem;  
     text-decoration: none;
   
 }
