--- a/src/SCSS/_signUp.scss
+++ b/src/SCSS/_signUp.scss
@@ -1,3 +1,5 @@
+
+
 .styled-select {
     background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
     height: 29px;
@@ -32,7 +34,7 @@
 
 .signUp-btn {
     padding: 3% 8%;
-    margin: 2% 0%;
+    margin: 7% 0 0 0;
     align-content: center;
     width: 100%;
 	background-color: $fourthy;
