--- a/src/SCSS/_login.scss
+++ b/src/SCSS/_login.scss
@@ -1,3 +1,9 @@
+.container-login {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+}
+
 .login_link {
         
     color: $fifthy;
@@ -7,11 +13,12 @@
     background-color: white;
     color: $secondary;
     border: 1px solid $fifthy;
+    margin: 0 0 10% 0;
     }
 }
 .login-btn {
     padding: 3% 8%;
-    margin: 2% 0%;
+    margin: 7% 0 0 0;
     align-content: center;
     width: 100%;
 	background-color: $fifthy;
@@ -26,5 +33,7 @@
 
 .logo {
     width: 30%;
-    height: 30%;
+    margin: 20% 0 0 0;
+  
+   
 }
