--- a/src/App.scss
+++ b/src/App.scss
@@ -10,3 +10,7 @@
 @import './SCSS/listBarTop10'; 
 @import './SCSS/listReviews';
 @import './SCSS/barDetails';
+@import './SCSS/landing';
+@import './SCSS/createBar';
+@import './SCSS/notifications';
+@import './SCSS/userDetail';
