--- a/src/SCSS/_barDetails.scss
+++ b/src/SCSS/_barDetails.scss
@@ -11,3 +11,17 @@
     font-size: 0.9rem;
     text-decoration: none;
 }
+
+.admin-button {
+    padding: 3% 8%;
+    margin: 5% 0%;
+    align-content: center;
+    width: 100%;
+	background-color: white;
+	color: $sixthy;
+    border-radius:5px;
+    border: 1px solid $sixthy;
+	text-align:center;
+    font-size: 0.9rem;
+    text-decoration: none;
+}
