--- a/src/SCSS/_listBarTop10.scss
+++ b/src/SCSS/_listBarTop10.scss
@@ -47,13 +47,14 @@
 .button-card-bar {
     padding: 3% 8%;
     align-content: center;
-    width:100%;
+    width:90%;
 	background-color: $fifthy;
 	color:#FFF;
 	border-radius:5px;
 	text-align:center;
     font-size: 0.9rem;  
     text-decoration: none;
+    margin: 5% 0;
   
 }
 
