--- a/src/SCSS/_layout.scss
+++ b/src/SCSS/_layout.scss
@@ -102,7 +102,7 @@ html {
             box-sizing: border-box;
             border: none;
             border-bottom: 1px solid $eighty;
-            color: $eighty;
+            color: $primary;
             font-size: 1rem;
             line-height: 1.3rem;
           }
@@ -113,7 +113,7 @@ html {
             box-sizing: border-box;
             border: none;
             border-bottom: 1px solid $eighty;
-            color: $eighty;
+            color: $primary;
             font-size: 1rem;
             line-height: 1.3rem;
            
@@ -150,5 +150,35 @@ html {
          .color-grey {
              color: $seventhy;
          }
+
+         .align-center {
+             justify-content: center;
+         }
+
+         .flex {
+    
+            display: flex;
+            flex-direction: row;
+        }
+         .grid-flex {
+             display: flex;
+         }
+
+         .half-box {
+             width: 80%;
+         }
+         .box {
+             width: 20%;
+             padding: 5%;
+         }
+         .circle-avatar {
+            width: 100%;
+            border-radius: 50%;
+        }
+        .width {
+            width: 100%;
+        }
+
+
     }    
 }    
