--- a/src/SCSS/_userDetail.scss
+++ b/src/SCSS/_userDetail.scss
@@ -1,7 +1,9 @@
 
         .box-avatar {
             width: 40%;
+            
         }
         .half-box-avatar {
             width: 60%;
+            padding: 0 5%;
         }
