--- a/src/SCSS/_layout.scss
+++ b/src/SCSS/_layout.scss
@@ -153,6 +153,7 @@ html {
 
          .align-center {
              justify-content: center;
+             text-align: center;
          }
 
          .flex {
@@ -178,7 +179,12 @@ html {
         .width {
             width: 100%;
         }
-
-
+        .margin {
+            margin: 5% 0;
+        }
+        .column {
+            display:flex;
+            flex-flow: column;
+        }
     }    
 }    
