--- a/src/SCSS/_filterBar.scss
+++ b/src/SCSS/_filterBar.scss
@@ -1,16 +1,6 @@
 
-  .container {
-    // height: 100vh;
-    // width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
   .filter-form {
-    height: 300px;
-    width: 200px;
-    border: solid 1px gold;
+    width: auto;
     overflow: auto;
   }
   .filter-item {
@@ -22,11 +12,71 @@
   }
   .filter-options {
     display: flex;
-    margin-bottom: 20px;
   }
-  .filter-option {
-    margin: 0 10px;
-  }
-  label, select {
-    margin-right: 10px;
-  }
+  
+  
+
+
+  .card-container {
+    padding: 5% 0% 0% 0%;
+    color: $primary;
+    background-color: #F7F9F9;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    display: flex;
+    margin: 7% 7%;
+    flex-flow: column;
+    border-radius:3px;
+    
+   
+   
+}
+
+.bar-card-title {
+    text-align: center;
+    display: flex;
+    width: 100%;
+    text-decoration: none;
+
+    
+    
+}
+
+.bar-card-beers {
+    text-align: left;
+    background-color: white;
+    padding: 0% 5% 10% 5%;
+
+    
+
+}
+
+.bar-title {
+    display: grid;
+    width: 50%;
+    text-align: left;
+    padding: 0% 5%;
+    text-decoration: none;
+}
+
+.card-rating {
+    width: 50%;
+    
+}
+
+.button-card-bar {
+    padding: 3% 8%;
+    align-content: center;
+    width:100%;
+	background-color: $fifthy;
+	color:#FFF;
+	border-radius:5px;
+	text-align:center;
+    font-size: 0.9rem;  
+    text-decoration: none;
+  
+}
+
+.card-home-subtitle {
+    color: grey;
+    text-decoration: none;
+}
