--- a/src/SCSS/_barDetails.scss
+++ b/src/SCSS/_barDetails.scss
@@ -33,7 +33,7 @@
 	// overflow-x: scroll;
     // border: 1px solid #000;
     width: 100%;
-    height: 150px;
+    height: 210px;
     background-color: white;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -47,6 +47,8 @@
 // }
 
 .class-imagen {
-    padding: 2px;
+    padding: 1px;
+    display: inline-block;
+    width: 100%;
     display: inline-block;
 }
