--- a/src/SCSS/_home.scss
+++ b/src/SCSS/_home.scss
@@ -13,3 +13,22 @@
 
 }
 
+.filter-button {
+    padding: 3% 8%;
+    margin: 2% 0%;
+ 
+    align-content: center;
+    width: 100%;
+	background-color: white;
+	color: $ninethy;
+    border-radius:2px;
+	text-align: center;
+    font-size: 0.9rem;
+    text-decoration: none;
+    border: 1px solid $eighty;
+    box-shadow: 1px 1px 1px 1px $eighty;
+    background: url("./filter.png") 25px 5px no-repeat;
+  
+  
+}
+
